<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menuFile" android:title="@string/menu_file" android:icon="@android:drawable/ic_menu_agenda"
        app:showAsAction="ifRoom"/>
        <item android:id="@+id/submenuEdit" android:title="@string/menu_edit">
            <menu>
                <group android:id="@+id/menuGroupEdit">
                    <item android:id="@+id/submenuEditCopy"
                        android:title="@string/menu_edit_copy"
                        android:icon="@android:drawable/ic_menu_compass"/>
                    <item android:id="@+id/submenuEditCut"
                        android:title="@string/menu_edit_cut"
                        android:icon="@android:drawable/ic_menu_edit"
                        />
                    <item android:id="@+id/submenuEditPaste"
                        android:title="@string/menu_edit_paste"
                        android:icon="@android:drawable/ic_menu_add"
                        />
                </group>
            </menu>
        </item>

    <item android:id="@+id/menuAbout" android:title="@string/menu_about"/>
    <item android:id="@+id/menuFinish" android:title="@string/menu_finish"/>

</menu>