<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menuContextualEdit" android:title="@string/menu_edit">
        <menu>
            <group>
                <item android:id="@+id/menuContextualEditCopy"
                    android:title="@string/menu_edit_copy"
                    android:icon="@android:drawable/ic_menu_compass"/>
                <item android:id="@+id/menuContextualEditCut"
                    android:title="@string/menu_edit_cut"
                    android:icon="@android:drawable/ic_menu_edit"
                    />
                <item android:id="@+id/menuContextualEditPaste"
                    android:title="@string/menu_edit_paste"
                    android:icon="@android:drawable/ic_menu_add"
                    />
            </group>
        </menu>
    </item>



</menu>