<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textViewText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ciclo de Vida de una Actividad"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/design_default_color_error"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/editTextNumberOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Ingrese un Numero"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="TextFields,VisualLintTextFieldSize"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextNumberTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Ingrese otro Numero"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_result_text"
        tools:ignore="HardcodedText"
        tools:text="0" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickAdd"
        android:text="Sumar"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonSubstract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickSubstract"
        android:text="@string/button_subtract_text" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickDivide"
        android:text="@string/button_divide_text" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickMultiply"
        android:text="@string/button_multiply_text" />

    <Button
        android:id="@+id/buttonPow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickPow"
        android:text="@string/button_pow_text" />

    <Button
        android:id="@+id/buttonFactorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickFactorial"
        android:text="@string/button_factorial_text" />

    <Button
        android:id="@+id/buttonSecondActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickShowSecondActivity"
        android:text="@string/button_show_second_activity_text" />

</LinearLayout>